hphp/hack/test/typecheck/legacy/shape_with_unknown_fields_is_not_subtype_of_shape_with_known_fields.php
<?hh // strict

function test(shape(...) $shape_with_unknown_fields): shape() {
  return $shape_with_unknown_fields;
}
